# Livox-SDK2

./: .gitignore  CMakeLists.txt
samples/livox_lidar_quick_start/: main.cpp
samples/multi_lidars_upgrade/: CMakeLists.txt  mid360_config.json
sdk_core/base/: logging.cpp
sdk_core/command_handler/: parse_lidar_state_info.cpp
